# mini-projet-projet-chalet

./: .gitignore  .gitignore.save  README.md  historical_weather_data.json  pyproject.toml
capteur/Arduino/mqttDHT/: mqttDHT.ino
capteur/Pico/Pico/: main.py
capteur/Pico/PicoDHT22/: main.py
chalet/: __init__.py  __main__.py  db.sqlite3  manage.py  mqtt_client.py
chalet/database/: __init__.py  data.db
chalet/meteo/: historical_weather_data.json  meteo.py
chalet/pages/: urls.py  views.py
chalet/pages/management/commands/: list_devices.py  publish_mqtt.py
chalet/pages/static/css/: styles.css
chalet/pages/templates/: base.html  captors.html  graphics.html  home.html  login.html  register.html
chalet/process_data/: __process__.py  process.py
chalet/services/: device_service.py  sensor_service.py
chalet/tests/: tests_unitaires.py
chalet/webServer/: asgi.py  settings.py  urls.py  wsgi.py
data/: simulated_weather_data.csv
database/: __database__.py  data.db
documentation/: README.md  cahier-des-charges.md
meteo/: __meteo__.py
process-data/: __process__.py
reading/: __reading__.py
sim/: __sim__.py
sim/data/: chalet_data.csv
tests/: test_database.py  tests_unitaires.py
