[tool.poetry]
name = "Chalet"
version = "0.1.0"
description = "Chalet Bin-Lin domotique"
authors = ["Thomas Bachmann Aurore Delessert Alexis Lantier"]
license = "Heig"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Education :: Testing",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
unidecode = "^1.3.8"
typing-extensions = "^4.12.2"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^23.0.0"
flake8 = "^6.0.0"
ruff = "^0.6.9"
pytest-timeout = "^2.3.1"
pytest-cov = "^5.0.0"
tox = "^4.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = '''
    --cov=wordle --cov-report term-missing
'''

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I"]
ignore = ["E501"]

[tool.poetry.scripts]
chalet = "chalet.__main__:main"